<resources>
    <string name="app_name">ICONex</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="complete">Complete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="use">Use Fingerprint</string>
    <string name="load">Load</string>
    <string name="retry">RETRY</string>
    <string name="view">View</string>
    <string name="input">Add</string>
    <string name="delete">Delete</string>
    <string name="modified">Edit</string>
    <string name="fold">접기</string>
    <string name="unitUSD">USD</string>
    <string name="unitBTC">BTC</string>
    <string name="unitICX">ICX</string>
    <string name="unitETH">ETH</string>
    <string name="withdraw">Transfer</string>
    <string name="deposit">Deposit</string>
    <string name="errNoAddress">Please enter address.</string>
    <string name="msgCopyPrivateKey">Private key is copied.</string>
    <string name="msgCopyAddress">Address is copied.</string>
    <string name="msgCopyTxID">Transaction ID is copied.</string>
    <string name="copyright">\@2018 ICON Foundation</string>
    <string name="intro1">ICONex enables users to create and manage wallets for various cryptocurrencies that are connected to ICON Network including ICX and ETH.</string>
    <string name="intro2">Convenient storage and transfer of ICX and other various cryptocurrencies connected with ICON are possible based on the Reserved Balance.</string>
    <string name="createWallet">Create Wallet</string>
    <string name="LoadWallet">Load Wallet</string>
    <string name="hintWalletPassword">Enter wallet password</string>
    <string name="titleCreateWallet">Create Wallet</string>
    <string name="cancelCreateWallet">Are you sure you want to cancel?</string>
    <string name="selectCoin">Select Coin</string>
    <string name="information">Wallet Info</string>
    <string name="stepDownload">Keystore File</string>
    <string name="savePrivateKey">Private Key</string>
    <string name="step1Header">Select a wallet between ICX wallet and ETH wallet.</string>
    <string name="step1Sub">You can add ERC20 tokens from the Ethereum wallet menu.</string>
    <string name="step1SelectCoin">Which coin would you like to add?</string>
    <string name="coin_icx">ICON (ICX)</string>
    <string name="coin_eth">Ethereum (ETH)</string>
    <string name="step2Header">You are responsible for keeping your password safe. DO NOT FORGET TO SAVE THIS. If you lose your password, you cannot restore it.</string>
    <string name="step2Sub">You will need the password to load your wallet in other devices using the Keystore file or your private key.</string>
    <string name="enterInfoHeader">Enter a wallet name and a password.</string>
    <string name="hintWalletAlias">Enter wallet name</string>
    <string name="hintCreateWalletPassword">At least 8 characters including letters, numbers, and special characters.</string>
    <string name="hintWalletPasswordConfirm">Confirm password</string>
    <string name="createPasswordWarning">Password must contain a combination of letters, numbers, and special characters. ( ? ! : . , % + - / * &lt; &gt; { } ( ) [ ] ` ” ‘ ~ _ ^ \ | @ # $ &amp; )</string>
    <string name="step3Header">This Keystore file contains the encrypted private key and requires the wallet password to access it.</string>
    <string name="step3Sub1">Use this Keystore file to load your wallet from other devices.</string>
    <string name="step3Sub2">You can download your Keystore file from the \"Backup wallet\" menu later.</string>
    <string name="walletDownloadGuide">Download Keystore file</string>
    <string name="walletDownload">Download Keystore file</string>
    <string name="walletBackupDownload">Download Keystore file</string>
    <string name="backupKeyStoreFileConfirm">DO NOT SHARE YOUR KEYSTORE FILE WITH OTHERS. Do you want to proceed? </string>
    <string name="noBackupKeyStoreFileConfirm">Do you want to proceed without downloading the Keystore file?</string>
    <string name="keyStoreDownloadAccomplished">\"%s\"\nThe file has been downloaded successfully.</string>
    <string name="step4Header">The private key is unique to your wallet and has no password.</string>
    <string name="step4Sub1">Pay special attention to your private key as anyone who can access to the private key can transfer assets from the wallets without your permission.</string>
    <string name="step4Sub2">You can access to your private key from the \'Backup wallet\' menu later.</string>
    <string name="privateKey">Private Key</string>
    <string name="copyPrivateKey">Copy Private Key</string>
    <string name="viewWalletInfo">View Wallet Info</string>
    <string name="errAliasEmpty">Please enter new wallet name.</string>
    <string name="errPwdEmpty">Please enter your password.</string>
    <string name="errCheckEmpty">Please confirm your password.</string>
    <string name="titleLoadWallet">Load Wallet</string>
    <string name="cancelLoadWallet">Are you sure you want to cancel?</string>
    <string name="loadWalletHeader">How would you like to add your wallet?</string>
    <string name="loadByKeystore">Keystore File</string>
    <string name="loadByPrivateKey">Private Key</string>
    <string name="selectKeyStore">Select Keystore File</string>
    <string name="loadKeystoreHeader">Select your Keystore file and enter your password.</string>
    <string name="loadKeystoreSub">If your Keystore file is stored on another device, move the Keystore file to this device or upload it to cloud service and then select the Keystore file.</string>
    <string name="loadKeystore">Select Keystore File</string>
    <string name="invalidKeyStoreFile">Incorrect wallet file form.</string>
    <string name="errPassword">Please check your password.</string>
    <string name="enterWalletAliasHeader">Please enter a new wallet name</string>
    <string name="errNoKeystoreFile">Please select keystore file.</string>
    <string name="errPrivateKey">Incorrect private key. Please check again.</string>
    <string name="hintEnterWalletAlias">Enter wallet name</string>
    <string name="loadByPrivateKeyHeader">Select a coin and enter your private key</string>
    <string name="loadByPrivateKeySub">Please be sure to enter the correct private key for the matching coin type.</string>
    <string name="enterPrivateKey">Enter your private key</string>
    <string name="titleLoadBundle">Load Wallet Bundle</string>
    <string name="loadBundleHeader">If you load a wallet bundle, the wallets that are already registered in your wallet will not be loaded.\nDo you want to proceed?</string>
    <string name="loadBundleDetailed">The password of each wallet is the same as the wallet bundle password.</string>
    <string name="loadBundleTotal">out of %d are already registered in your ICONex</string>
    <string name="loadBundleRegistered">%d wallets</string>
    <string name="registeredWallet">Registered</string>
    <string name="enterWalletAliasAndPassword">Please enter the new wallet name and the password.</string>
    <string name="walletPasswordGuide1">You are responsible for keeping your password safe. DO NOT FORGET TO SAVE THIS. If you lose your password, you cannot restore it.</string>
    <string name="walletPasswordGuide2">You will need the password to load your wallet in other devices using the Keystore file or your private key.</string>
    <string name="duplicateWalletAlias">This wallet name already exists.</string>
    <string name="duplicateWalletAddress">This wallet account already exists.</string>
    <string name="errAtLeast">Password must contain at least 8 characters.</string>
    <string name="errPasswordPatternMatch">Password must contain a combination of letters, numbers, and special characters. ( ? ! : . , % + - / * &lt; &gt; { } ( ) [ ] ` ” ‘ ~ _ ^ \\ | @ # $ &amp; )</string>
    <string name="errSerialChar">Password must not have more than 2 consecutive identical characters.</string>
    <string name="errWhiteSpace">Please do not leave blank.</string>
    <string name="errPasswordNotMatched">Passwords do not match. Please check again.</string>
    <string name="appbarSelectorWallets">Wallets</string>
    <string name="appbarSelectorCoinsNTokens">Coins&amp;Tokens</string>
    <string name="totalAssetValuationAmount">Total Assets</string>
    <string name="infoTotalAsset">The total asset is based on Coinmarket cap and the tokens that have no USD-converted prices will not be included.</string>
    <string name="exportWalletBundle">Export Wallet Bundle</string>
    <string name="settingLock">Screen Lock</string>
    <string name="settingLanguage">Language</string>
    <string name="appInfo">App Info</string>
    <string name="ICONexDisclaimers">ICONex Disclaimer</string>
    <string name="currentVersion">Current Version</string>
    <string name="latestVersion">Latest Version</string>
    <string name="update">Update</string>
    <string name="openSource">Open source Licenses</string>
    <string name="networkProvider">Network Provider</string>
    <string name="disclaimersHeader">At the time of downloading and using the official ICX wallet,\"ICONex\", the below disclaimer will be applied to the users.</string>
    <string name="txID">Transaction ID</string>
    <string name="viewTxInfo">Check Tx</string>
    <string name="swapHeader1">ICX ERC20 tokens on the Ethereum network can now be swapped and transferred to ICON\'s Mainnet</string>
    <string name="swapDetailed1">Token swap will take place after generating your new ICX coin wallet.</string>
    <string name="swapGuideHeader">Please refer to the following precautions</string>
    <string name="swapGuideDetailed1">If you follow the instructions the ICX wallet for token swap will be created. (The private key of the ICX wallet for token swap will be identical to the private key of your previous Ethereum wallet.)</string>
    <string name="swapGuideDetailed2">Please make sure that you name the wallet so that you can distinguish the wallet for token swap from other wallets.</string>
    <string name="swapGuideDetailed3">If you have stored your tokens in your private wallet such as MyEtherWallet, please load the ETH wallet using the Keystore or private key. Then, the ICX tokens will be added automatically to your ETH wallet and \"Swap\" button will be created.</string>
    <string name="swapGuideDetailed4">We do not support token swaps for addresses listed on the exchange. In this regard, please take caution for token swaps within the exchange.</string>
    <string name="maunalConfirm">I have read the instructions, and agree to continue with the token swap.</string>
    <string name="swapPrecautionsH">Please refer to the following precautions.</string>
    <string name="swapPrecautionsD1">Users can appoint the number of ERC20 tokens willing to swap, and once the swap has taken place it cannot be reversed.</string>
    <string name="swapPrecautionsD2">After the swap has been completed, ICX distributions will take place automatically at a designated time. However, schedule is subject to change so please refer to the following information.</string>
    <string name="swapPrecautionsD3">You may not be able to transfer swapped ICX coins to the exchanges that do not support ICX coin wallets.</string>
    <string name="swapPolicy">ICX Token Swap FAQ</string>
    <string name="swapRequestDone">Request for swap has been completed.\n\nICX distribution schedule is subject to change so please refer to the following information.</string>
</resources>