<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_round"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="54dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="54dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/noto_sans_regular"
            android:gravity="center"
            android:text="@string/swapRequestDone"
            android:textColor="@color/colorText"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/txt_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/swapPolicy"
            android:textColor="#4588e6"
            android:textSize="14dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_btn_dialog"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/button_text"
        android:textSize="16dp" />

</LinearLayout>