<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="foundation.icon.iconex.token.swap.SwapGuideFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="132dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/swapHeader1"
                android:textColor="@color/colorText"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/dot_gray" />

                <TextView
                    android:id="@+id/txt_swap_detailed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/noto_sans_regular"
                    android:gravity="start|center_vertical"
                    android:text="@string/swapDetailed1"
                    android:textColor="@color/colorText70"
                    android:textSize="12dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Creating manual -->

                <LinearLayout
                    android:id="@+id/layout_manual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:text="@string/swapGuideHeader"
                        android:textColor="@color/colorText"
                        android:textSize="14dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="3dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/dot_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/noto_sans_regular"
                            android:gravity="start|center_vertical"
                            android:text="@string/swapGuideDetailed1"
                            android:textColor="@color/colorText70"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="3dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/dot_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/noto_sans_regular"
                            android:gravity="start|center_vertical"
                            android:text="@string/swapGuideDetailed2"
                            android:textColor="@color/colorText70"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="3dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/dot_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/noto_sans_regular"
                            android:gravity="start|center_vertical"
                            android:text="@string/swapGuideDetailed3"
                            android:textColor="@color/colorText70"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="3dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/dot_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/noto_sans_regular"
                            android:gravity="start|center_vertical"
                            android:text="@string/swapGuideDetailed4"
                            android:textColor="@color/colorText70"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Precautions -->

                <LinearLayout
                    android:id="@+id/layout_precautions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:text="@string/swapPrecautionsH"
                        android:textColor="@color/colorText"
                        android:textSize="14dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="3dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/dot_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/noto_sans_regular"
                            android:gravity="start|center_vertical"
                            android:text="@string/swapPrecautionsD1"
                            android:textColor="@color/colorText70"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="3dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/dot_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/noto_sans_regular"
                            android:gravity="start|center_vertical"
                            android:text="@string/swapPrecautionsD2"
                            android:textColor="@color/colorText70"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:text="@string/swapPolicy"
                        android:textColor="#4588e6"
                        android:textSize="12dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="3dp"
                            android:layout_height="3dp"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/dot_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/noto_sans_regular"
                            android:gravity="start|center_vertical"
                            android:text="@string/swapPrecautionsD3"
                            android:textColor="@color/colorText70"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="#ededed" />

            <LinearLayout
                android:id="@+id/layout_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="24dp"
                android:paddingStart="24dp">

                <CheckBox
                    android:id="@+id/cb_confirm"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:button="@drawable/bg_check_box" />

                <TextView
                    android:id="@+id/txt_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/noto_sans_regular"
                    android:text="@string/maunalConfirm"
                    android:textColor="@color/colorText"
                    android:textSize="12dp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:padding="16dp">

            <Button
                android:id="@+id/btn_step1a"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_rounded_button_a"
                android:enabled="false"
                android:fontFamily="@font/noto_sans_medium"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/button_text"
                android:textSize="16dp" />

            <LinearLayout
                android:id="@+id/layout_btn_step1b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_back"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_button_a"
                    android:fontFamily="@font/noto_sans_medium"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btn_next"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_colored_rounded_button_a"
                    android:enabled="false"
                    android:fontFamily="@font/noto_sans_medium"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text"
                    android:textSize="16dp" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
